# nirvati-app-manager-v2

./: .gitignore  .gitmodules  .gitpod.yml  Cargo.toml  README.md  TODO.md  build.rs
src/: composegenerator.rs  dependencies.rs  main.rs  manage.rs  tera.rs  utils.rs
src/composegenerator/: types.rs  utils.rs
src/composegenerator/output/: types.rs
src/composegenerator/v1/: convert.rs  helpers.rs  mod.rs  types.rs
src/manage/: files.rs  ports.rs  processing.rs
src/tera/: builtins.rs  js.rs  second_stage.rs
src/tera/polyfills/: README.md  globals.d.ts  textencoder.ts  tsconfig.json  webcrypto.ts
